--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -248,7 +248,7 @@
         $.ajax({
 
             type:"get",
-            url:"/course/timetable",
+            url:"/platform/course/timetable",
             timeout:10000,
             success:function (json) {
                 if (json.status != 200){
