--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -67,12 +67,12 @@
                 };
                 $.ajax({
                     type: "post",
-                    url: "/bind/wechat",
+                    url: "/platform/bind/wechat",
                     data: data,
                     success : function (data) {
                         if (data.status==200){
                             alert("绑定成功")
-                            window.location="/show/timetable";
+                            window.location="/platform/show/timetable";
                         }
                         else if (data.status==402){
                             alert(key+"账号密码错误");
@@ -98,7 +98,7 @@
     <div class="mycenter">
         <div class="mysign">
             <div align="center">
-                <img src="/img/hkxjLogo.JPG"/>
+                <img src="/platform/img/hkxjLogo.JPG"/>
                 <h2> 用户绑定</h2>
             </div>
             <div class="form-group col-lg-12">
