重构空教室查询

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,8 +5,8 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="#">
-    <script src="/js/jquery.js"></script>
-    <script src="/js/angular.min.js"></script>
+    <script src="/platform/js/jquery.js"></script>
+    <script src="/platform/js/angular.min.js"></script>
 </head>
 <style>
     .ui-body-d{
