--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -254,7 +254,7 @@
                 if (json.status != 200){
                     alert(json.message);
                     if (json.status == 401){
-                        window.location="/bind";
+                        window.location="/platform/bind";
                     }
                 }
                 $("td").not($("td:nth-of-type(1)")).text('').css({"background-color":"white"});
