--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -205,7 +205,7 @@
     function theWeek() {
 
         var x = new Date();
-        var y = x.setFullYear(2018, 7, 24);
+        var y = x.setFullYear(2019, 2, 4);
         var today = new Date();
         return Math.ceil((today - y) / (24 * 60 * 60 * 1000) / 7);
 
@@ -248,20 +248,20 @@
         $.ajax({
 
             type:"get",
-            url:"/platform/course/timetable",
+            url:"/course/timetable",
             timeout:10000,
             success:function (json) {
                 if (json.status != 200){
                     alert(json.message);
                     if (json.status == 401){
-                        window.location="/platform/bind";
+                        window.location="/bind";
                     }
                 }
                 $("td").not($("td:nth-of-type(1)")).text('').css({"background-color":"white"});
                 arrClass=json.data;
                 function getText(a,b) {
                     var raN=Math.floor(Math.random() *23+1);
-                    $(arrTd[a]).text(arrClass[b].courseObject.name+"#"+"@"+arrClass[b].position)
+                    $(arrTd[a]).text(arrClass[b].course.name+"#"+"@"+arrClass[b].room.name)
                         .css({"background-color":"#"+arrBlue[raN]});
                 }
                 for (var k=0;k<arrClass.length;k++) {
