--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -67,8 +67,7 @@
                 };
                 $.ajax({
                     type: "post",
-                    // url: "/platform/bind/wechat",
-                    url: "/bind/wechat",
+                    url: "/platform/bind/wechat",
                     data: data,
                     success : function (data) {
                         if (data.status==200){
