--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -67,14 +67,12 @@
                 };
                 $.ajax({
                     type: "post",
-                    // url: "/platform/bind/wechat",
-                    url: "/bind/wechat",
+                    url: "/platform/bind/wechat",
                     data: data,
                     success : function (data) {
                         if (data.status==200){
                             alert("绑定成功")
-                            window.location="/show/timetable";
-                            // window.location="/platform/show/timetable";
+                            window.location="/platform/show/timetable";
                         }
                         else if (data.status==402){
                             alert("账号密码错误");
