--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -49,6 +49,7 @@
                 return re.test(s)
         }
 
+        var isCommitted = false; //设置初始提交标识
         $(function () {
             $("#login").click(function () {
                 var account = $("#account").val();
@@ -65,29 +66,37 @@
                     "account": account,
                     "password": password
                 };
-                $.ajax({
-                    type: "post",
-                    url: "/platform/bind/wechat",
-                    data: data,
-                    success : function (data) {
-                        if (data.status==200){
-                            alert("绑定成功")
-                            window.location="/platform/show/timetable";
-                        }
-                        else if (data.status==402){
-                            alert("账号密码错误");
-                            window.location.reload();
-                        }
-                        else if (data.status==403){
-                            alert("账号已经绑定")
-                        }
-                        else {
-                            alert("服务器读取超时");
-                            window.location.reload();
-                        }
 
-                    }
-                });
+                if(isCommitted==false) { //当表单被成功提交过一次后isCommitted将变为true,根据判断将无法进行提交。
+                    isCommitted = true;//提交表单后，将表单是否已经提交标识设置为true
+                    $.ajax({
+                        type: "post",
+                        url: "/platform/bind/wechat",
+                        data: data,
+                        success : function (data) {
+                            if (data.status==200){
+                                alert("绑定成功")
+                                isCommitted = false;//提交完成，可以继续提交
+                                window.location="/platform/show/timetable";
+                            }
+                            else if (data.status==402){
+                                alert("账号密码错误");
+                                isCommitted = false;//提交完成，可以继续提交
+                                window.location.reload();
+                            }
+                            else if (data.status==403){
+                                alert("账号已经绑定")
+                                isCommitted = false;//提交完成，可以继续提交
+                            }
+                            else {
+                                alert("服务器读取超时");
+                                isCommitted = false;//提交完成，可以继续提交
+                                window.location.reload();
+                            }
+                        }
+                    });
+                }
+
             });
         });
     </script>
