--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -67,7 +67,7 @@
                     "password": password
                 };
 
-                if(isCommitted==false) { //当表单被成功提交过一次后isCommitted将变为true,根据判断将无法进行提交。
+                if(isCommitted) { //当表单被成功提交过一次后isCommitted将变为true,根据判断将无法进行提交。
                     isCommitted = true;//提交表单后，将表单是否已经提交标识设置为true
                     $.ajax({
                         type: "post",
