--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -92,6 +92,9 @@
                             else if (data.status === 403) {
                                 alert("账号已经绑定");
                                 isCommitted = false;//提交完成，可以继续提交
+                            }else if(data.status === 404) {
+                                alert("验证码错误");
+                                isCommitted = false;//提交完成，可以继续提交
                             }
                             else {
                                 alert("服务器读取超时");
@@ -133,7 +136,7 @@
                         <input type="text" class="form-control" id="verifyCode" placeholder="请输入验证码">
                     </div>
                     <div class="col-sm-4">
-                        <img src="/platform/login/verifyCode.jpg" style="height: 45px;width: 99px;margin-top: 5px;float: right;"/>
+                        <img src="/platform/verifyCode.jpg" style="height: 45px;width: 99px;margin-top: 5px;float: right;"/>
                     </div>
                 </div>
 
