--- a/src/main/resources/templates/LoginWeb/test.html
+++ b/src/main/resources/templates/LoginWeb/test.html
@@ -54,7 +54,6 @@
             $("#login").click(function () {
                 var account = $("#account").val();
                 var password = $("#password").val();
-                var verifyCode = $("#verifyCode").val();
                 if(account.length !== 10|| !isPositiveInteger(account)){
                     alert("请正确填写账号!");
                     return ;
@@ -63,13 +62,9 @@
                     alert("请正确填写密码!");
                     return ;
                 }
-                if(verifyCode === ""){
-                    alert("请输入验证码!");
-                }
                 var data = {
                     "account": account,
-                    "password": password,
-                    "verifyCode": verifyCode
+                    "password": password
                 };
 
                 if (!isCommitted) { //当表单被成功提交过一次后isCommitted将变为true,根据判断将无法进行提交。
@@ -107,17 +102,6 @@
                 <label for="password">密码</label>
                 <input type="password" class="form-control" id="password" placeholder="请输入密码">
             </div>
-
-            <div class="form-group col-lg-12">
-                <label for="verifyCode">验证码</label>
-                <div class="row">
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" id="verifyCode" placeholder="请输入验证码">
-                    </div>
-                    <div class="col-sm-4">
-                        <img src="/platform/login/verifyCode.jpg" style="height: 45px;width: 99px;margin-top: 5px;float: right;"/>
-                    </div>
-                </div>
 
             </div>
             <div class="form-group " align="center" >
