--- a/src/main/resources/templates/LoginWeb/Login.html
+++ b/src/main/resources/templates/LoginWeb/Login.html
@@ -44,9 +44,9 @@
         }
     </style>
     <script type="text/javascript">
-        function isPositiveInteger(s){
-                re = /^[0-9]\d+$/ ;
-                return re.test(s)
+        function isPositiveInteger(s) {
+            re = /^[0-9]\d+$/;
+            return re.test(s)
         }
 
         var isCommitted = false; //设置初始提交标识
@@ -54,13 +54,13 @@
             $("#login").click(function () {
                 var account = $("#account").val();
                 var password = $("#password").val();
-                if(account.length !== 10|| !isPositiveInteger(account)){
+                if (account.length !== 10 || !isPositiveInteger(account)) {
                     alert("请正确填写账号!");
-                    return ;
+                    return;
                 }
-                if(password === ""){
+                if (password === "") {
                     alert("请正确填写密码!");
-                    return ;
+                    return;
                 }
                 var data = {
                     "account": account,
@@ -73,21 +73,27 @@
                         type: "post",
                         url: "/platform/bind/wechat",
                         data: data,
-                        success : function (data) {
+                        success: function (data) {
                             if (data.status === 200) {
                                 alert("绑定成功");
                                 isCommitted = false;//提交完成，可以继续提交
-                            }
-                            else if (data.status === 402) {
+                            } else if (data.status === 402) {
                                 alert("账号密码错误");
                                 isCommitted = false;//提交完成，可以继续提交
                                 window.location.reload();
-                            }
-                            else if (data.status === 403) {
+                            } else if (data.status === 403) {
                                 alert("账号已经绑定");
                                 isCommitted = false;//提交完成，可以继续提交
-                            }
-                            else {
+                            } else if (data.status === 405) {
+                                alert("暂时无法登录");
+                                isCommitted = false;//提交完成，可以继续提交
+                            } else if (data.status === 406) {
+                                alert("评估未完成");
+                                isCommitted = false;//提交完成，可以继续提交
+                            } else if (data.status === 407 || data.status === 404) {
+                                alert("网络异常，请重试");
+                                isCommitted = false;//提交完成，可以继续提交
+                            } else {
                                 alert("服务器读取超时");
                                 isCommitted = false;//提交完成，可以继续提交
                                 window.location.reload();
@@ -120,8 +126,8 @@
                 <input type="password" class="form-control" id="password" placeholder="请输入密码">
             </div>
 
-            <div class="form-group " align="center" >
-                <button class="btn btn-success" type="button" id="login" >绑定</button>
+            <div class="form-group " align="center">
+                <button class="btn btn-success" type="button" id="login">绑定</button>
             </div>
         </div>
     </div>
