--- a/src/main/resources/templates/LoginWeb/evaluate.html
+++ b/src/main/resources/templates/LoginWeb/evaluate.html
@@ -74,7 +74,7 @@
                         data: data,
                         success: function (data) {
                             if (data.status === 200) {
-                                alert(data.msg);
+                                alert(data.message);
                                 isCommitted = false;//提交完成，可以继续提交
                             } else if (data.status === 402) {
                                 alert("账号密码错误");
